# mousetouch

./: README.md  requirements.txt
display/: CMakeLists.txt  IOUtils.h  README.md  autoBuild_windows.sh  common.h  demo_sensor.cpp  hcicontroller.cpp  hcicontroller.h  imageUtils.cpp  imageUtils.h  layerobject.cpp  layerobject.h  mousefifo.h  multimouse.cpp  multimouse.h  renderer.cpp  renderer.h  sensor_demo.cpp  shader.cpp  shader.h  textrectlayer.cpp  textrectlayer.h  utils.h
display/data/: adjustFragment.glsl  adjustFragment1.glsl  defaultFragment.glsl  defaultVertex.glsl  movingFrag.glsl  newAdjFrag.glsl
display/winusb/: CMakelists.txt  SerialPort.cpp  SerialPort.h  libusb_utils.cpp  libusb_utils.h  mousecore.cpp  mousecore.h  mousecore_native.cpp  mousecore_sp.cpp  usb_utils.cpp  usb_utils.h
py_dev/: README.md  angle.py  comm_handler.py  hci.py  location.py  pipe_sever.py  setting.py  utils.py
